# prompt_engineering_task

./: .env.example  .gitignore  README.md  pyproject.toml
config/: gpt-4.1-mini-2025-04-14.yaml  gpt-4.yaml  gpt-4o-mini-2024-07-18.yaml  gpt-5-2025-08-07.yaml
outputs/v1/: v1_llm_eval.json  v1_response.json
outputs/v2/: v2_llm_eval.json  v2_response.json
outputs/v3/: v3_llm_eval.json  v3_response.json
src/prompt_engineering/: config.py  main.py
src/prompt_engineering/client/: __init__.py  llm_client.py
src/prompt_engineering/data/: dataset.csv  golden_data.json
src/prompt_engineering/eval/: __init__.py  deepeval_runner.py  evaluate.md  evaluation.py
src/prompt_engineering/optimization/: __init__.py  meta_optimize.md  optimization.py
src/prompt_engineering/prompts/: v1.md  v2.md  v3.md
src/prompt_engineering/util/: __init__.py  data_loader.py  guardrails.py  prompt_loader.py
