[project]
name = "prompt_engineering_task"
version = "0.1.0"
description = "AI Architect Prompt Engineering Task"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "tenacity>=8.5",
    "typer>=0.15.0",
    "rich>=13.9",
]

[project.optional-dependencies]
deepeval = [
    "deepeval>=2.0",
]

[project.scripts]
prompt-engineering = "prompt_engineering.main:app"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_engineering"]

[tool.ruff]
target-version = "py311"
exclude = [".eggs", ".venv", "build", "dist", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120